data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_434.wast
;; 5. **Test Description:** Create a loop where a `br` instruction inside an `if` block targets the loop itself with mismatches in operand stack types before and after the `br` operation, checking for infinite looping due to type management issues.

(assert_invalid
  (module
    (func (param i32) (result i32)
      (block (result i32)
        (loop (result i32 i32)
          (if (result i32) (i32.const 1)
            (br 1)
          )
          (local.get 0) (i32.const 0)
        )
      )
    )
  )
  "type mismatch"
)